--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -75,3 +75,8 @@
 	font-family: "test2";
 	src: url(../fonts/freeset-bold-cyrillic_[allfont.ru].ttf);
 }
+
+@font-face {
+	font-family: "Tahoma";
+	src: url(../fonts/Tahoma.ttf);
+}
