--- a/app/css/main.css
+++ b/app/css/main.css
@@ -524,10 +524,32 @@ a {
       width: 100%;
       z-index: 1;
       background: #FFF;
-      overflow: hidden; }
+      overflow:; }
+      .header-nav-list-ul-outter:after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        background: #FFF;
+        top: 0;
+        right: 100%;
+        z-index: 0;
+      }
+      .header-nav-list-ul-outter:before {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        background: #FFF;
+        top: 0;
+        left: 100%;
+        z-index: 0;
+      }
       .header-nav-list-ul-outter__shadow {
-        -webkit-box-shadow: 0px 0px 10px 3px #DEDEDE;
-                box-shadow: 0px 0px 10px 3px #DEDEDE;
+        /*-webkit-box-shadow: 0px 0px 10px 3px #DEDEDE;
+                box-shadow: 0px 0px 10px 3px #DEDEDE;*/
         height: 1px;
         border-top: 1px solid #DEDEDE; }
     .header-nav-list-item {
