--- a/app/css/main.css
+++ b/app/css/main.css
@@ -535,7 +535,6 @@ a {
         top: 0;
         right: 100%;
         z-index: 0;
-        border-top: 1px solid #DEDEDE;
       }
       .header-nav-list-ul-outter:before {
         content: '';
@@ -547,7 +546,7 @@ a {
         top: 0;
         left: 100%;
         z-index: 0;
-        border-top: 1px solid #DEDEDE;      }
+             }
       .header-nav-list-ul-outter__shadow {
         /*-webkit-box-shadow: 0px 0px 10px 3px #DEDEDE;
                 box-shadow: 0px 0px 10px 3px #DEDEDE;*/
