--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2660,7 +2660,29 @@ a {
   margin-right: 30px; }
 
 .tabs-container-list-item-innercontainer-side-material__head {
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.material-text-name {
+  margin-right: 20px; }
+
+.material-detail a {
+  font-size: 14px;
+  color: #000; }
+
+.material-category {
+  margin-left: auto; }
 
 .tabs-container-list-item-innercontainer-side-material-list {
   display: -webkit-box;
@@ -2671,7 +2693,13 @@ a {
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  margin-bottom: 25px; }
+  padding-bottom: 15px;
+  border-bottom: 1px solid #C7C7C7;
+  margin-bottom: 15px; }
+  .tabs-container-list-item-innercontainer-side-material-list:last-child {
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    border-bottom: none; }
 
 .tabs-container-list-item-innercontainer-side-material-list-item {
   display: -webkit-box;
