--- a/app/css/main.css
+++ b/app/css/main.css
@@ -352,10 +352,17 @@ a {
   -ms-flex-align: center;
   align-items: center; }
   .header-wrapper-item-row:first-child {
-    font-size: 14px;
-    margin-bottom: 18px; }
+    font-size: 18px;
+    margin-bottom: 0px; }
+    @media screen and (max-width: 480px) {
+      .header-wrapper-item-row:first-child {
+        font-size: 14px;
+        margin-bottom: 18px; } }
     .header-wrapper-item-row:first-child .header-wrapper-item-row__text {
-      font-size: 14px; }
+      font-size: 18px; }
+      @media screen and (max-width: 480px) {
+        .header-wrapper-item-row:first-child .header-wrapper-item-row__text {
+          font-size: 14px; } }
 
 .header-wrapper-item-row_hover:hover {
   text-decoration: underline;
