circle for to-top arrow

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -336,7 +336,7 @@ a {
       width: 100%; }
 
 .header-wrapper_background {
-  background: #F9F9F9; }
+  background: #FFF; }
 
 @media screen and (max-width: 1024px) {
   .header-wrapper_background {
@@ -6268,13 +6268,21 @@ a {
   width: 40px;
   height: 40px;
   right: 20px;
+  border-radius: 50%;
+  border: 2px solid #D80027;
   z-index: 1000;
   cursor: pointer;
   -webkit-transition: 0.3s ease-in-out;
   -o-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out; }
   .to-top svg {
-    width: 100%; }
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
   .to-top.active {
     bottom: 20px; }
 
