--- a/app/css/main.css
+++ b/app/css/main.css
@@ -637,17 +637,17 @@ a {
     .header-nav-list-ul-outter.active-1:before, .header-nav-list-ul-outter.active-1:after {
       background: #c7d0cc; }
   .header-nav-list-ul-outter.active-2 {
-    background: #ffbaba; }
+    background: #fffbb4; }
     .header-nav-list-ul-outter.active-2:before, .header-nav-list-ul-outter.active-2:after {
-      background: #ffbaba; }
+      background: #fffbb4; }
   .header-nav-list-ul-outter.active-3 {
-    background: #d7ffd6; }
+    background: #dafff6; }
     .header-nav-list-ul-outter.active-3:before, .header-nav-list-ul-outter.active-3:after {
-      background: #d7ffd6; }
+      background: #dafff6; }
   .header-nav-list-ul-outter.active-4 {
-    background: #c7c7c7; }
+    background: #fcdc91; }
     .header-nav-list-ul-outter.active-4:before, .header-nav-list-ul-outter.active-4:after {
-      background: #c7c7c7; }
+      background: #fcdc91; }
 
 .header-nav-list-ul-outter__shadow {
   /*-webkit-box-shadow: 0px 0px 10px 3px #DEDEDE;
@@ -779,15 +779,15 @@ a {
   opacity: 1; }
 
 .header-nav-list-item:nth-child(3):hover {
-  background: rgba(255, 186, 186, 0.7);
+  background: rgba(255, 251, 180, 0.7);
   opacity: 1; }
 
 .header-nav-list-item:nth-child(4):hover {
-  background: rgba(215, 255, 214, 0.7);
+  background: rgba(218, 255, 246, 0.7);
   opacity: 1; }
 
 .header-nav-list-item:nth-child(5):hover {
-  background: rgba(199, 199, 199, 0.7);
+  background: rgba(252, 220, 145, 0.7);
   opacity: 1; }
 
 .header-nav-list-item.active {
@@ -799,15 +799,15 @@ a {
   opacity: 1; }
 
 .header-nav-list-item:nth-child(3).active {
-  background: rgba(255, 186, 186, 0.7);
+  background: rgba(255, 251, 180, 0.7);
   opacity: 1; }
 
 .header-nav-list-item:nth-child(4).active {
-  background: rgba(215, 255, 214, 0.7);
+  background: rgba(218, 255, 246, 0.7);
   opacity: 1; }
 
 .header-nav-list-item:nth-child(5).active {
-  background: rgba(199, 199, 199, 0.7);
+  background: rgba(252, 220, 145, 0.7);
   opacity: 1; }
 
 .header-nav-search-bar {
